# Launcher

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .yarnrc.yml  Cargo.toml  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  Layout.tsx  UpdateDispatchingArray.ts  commands.rs  file_utils.rs  frames.rs  http_utils.rs  main.rs  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file_utils.rs  http_utils.rs  main.rs  process_utils.rs  structs.rs
src/components/: Button.tsx  LogsPanel.tsx  SelectGameVersion.tsx
src/frames/: main_buttons.rs
src/pages/: FirstTimeSetupPage.tsx  HomePage.tsx  TestingPanel.tsx
src/pages/setupPhase/: Intro.tsx  PickGameVersion.tsx
src/setupPhase/: Intro.tsx  PickGameVersion.tsx
src/styles/: bulma-excerpts.css  bulma-overrides.sass  firstTimeSetup.css  gameVersion.css  homepage.css  intro.css  logs.css  style.css
