[package]
name = "peacock-launcher"
version = "0.0.0"
description = "Peacock's launcher."
authors = ["The Peacock Project"]
license = "MIT"
repository = "thepeacockproject/Launcher"
edition = "2021"
rust-version = "1.66"
publish = false

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["stream"] }
futures-util = "0.3.25"
zip = { package = "binstall-zip", version = "0.6.3", default-features = false, features = ["deflate"] }
tokio = { version = "1.21.2", features = ["process", "rt-multi-thread", "macros"] }
egui = "0.20.1"
dirs = "4.0.0"
eframe = { version = "0.20.1", features = ["persistence"] }
tracing-subscriber = "0.3.16"
