[package]
name = "peacock-launcher"
version = "0.0.0"
description = "Peacock's launcher."
authors = ["The Peacock Project"]
license = "MIT"
repository = "thepeacockproject/Launcher"
edition = "2021"
rust-version = "1.57"
publish = false

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }
tauri = { version = "1.1.1", features = ["process-command-api"] }
reqwest = { version = "0.11.12", features = ["stream"] }
futures-util = "0.3.24"
zip = { package = "binstall-zip", version = "0.6.3", default-features = false, features = ["deflate"] }
tokio = { version = "1.21.2", features = ["process", "rt-multi-thread", "macros"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
